# hack/python-sdk/swagger.json
@@ -167,6 +167,9 @@
     "jobset.v1alpha2.JobSetSpec": {
       "description": "JobSetSpec defines the desired state of JobSet",
       "type": "object",
+      "required": [
+        "jobCleanupStrategy"
+      ],
       "properties": {
         "coordinator": {
           "description": "Coordinator can be used to assign a specific pod as the coordinator for the JobSet. If defined, an annotation will be added to all Jobs and pods with coordinator pod, which contains the stable network endpoint where the coordinator pod can be reached. jobset.sigs.k8s.io/coordinator=\u003cpod hostname\u003e.\u003cheadless service\u003e",
@@ -175,6 +178,11 @@
         "failurePolicy": {
           "description": "FailurePolicy, if set, configures when to declare the JobSet as failed. The JobSet is always declared failed if any job in the set finished with status failed.",
           "$ref": "#/definitions/jobset.v1alpha2.FailurePolicy"
+        },
+        "jobCleanupStrategy": {
+          "description": "JobCleanupStrategy is defined what to do with active jobs when the JobSet is finished. This applies to all possible conditions, be it Completed, Finished or Terminated.",
+          "type": "string",
+          "default": ""
         },
         "managedBy": {
           "description": "ManagedBy is used to indicate the controller or entity that manages a JobSet. The built-in JobSet controller reconciles JobSets which don't have this field at all or the field value is the reserved string `jobset.sigs.k8s.io/jobset-controller`, but skips reconciling JobSets with a custom value for this field.\n\nThe value must be a valid domain-prefixed path (e.g. acme.io/foo) - all characters before the first \"/\" must be a valid subdomain as defined by RFC 1123. All characters trailing the first \"/\" must be valid HTTP Path characters as defined by RFC 3986. The value cannot exceed 63 characters. The field is immutable.",
